--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -5,15 +5,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  border: 1px solid black;
   box-sizing: border-box;
   padding-top: 10rpx;
-  padding-bottom: 30rpx;
+  padding-bottom: 20rpx;
 }
 .todoList {
  width: 750rpx;
- height: 552rpx;
- border:1px solid blue;
+ height: 572rpx;
  color: #333;
  font-size: 28rpx;
 }
@@ -45,18 +43,17 @@
 .tomato-wrapper {
   flex: 1;
   margin-top: 33px;
-  padding: 0 28rpx;
+  padding: 0 30rpx;
   box-sizing: border-box;
 }
 .tomato-wrapper .tomato {
   background-color: #eef7f6;
   border-radius: 8rpx;
   box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.10);
-  height: 400rpx;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 .createButton {
   position: absolute;
