--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -6,7 +6,6 @@
     </view>
     <view class="detail">
       <open-data type="userNickName" class="name"></open-data>
-      <text>绑定账号</text>
     </view>
     <button open-type="contact" class="qr">问题反馈</button>
   </view>
@@ -15,12 +14,24 @@
     <view hover-class="hover-class" class="{{tab === 'tomato' && 'active'}}" data-name="tomato" bindtap="changeTab">番茄历史</view>
     <view hover-class="hover-class" class="{{tab === 'task' && 'active'}}" data-name="task" bindtap="changeTab">我完成的任务</view>
   </view>
-  <scroll-view scroll-y="true" class="lists">
-    <view class="item"  wx:for="{{lists}}" wx:for-index="key" wx:key="index">
-      <view class="time">{{key}}</view>
-      <view class="content" wx:for="{{lists[key]}}" wx:for-index="index" wx:key="index">
-        <text> {{item.time}}</text>    
-        <view class="detail">{{item.text}} </view>
+  <scroll-view scroll-y="true" class="lists" wx:if="{{tab === 'tomato'}}">
+    <view class="item"  wx:for="{{tomatoes}}" wx:for-index="key" wx:key="index">
+      <wxs src="../../lib/formattor.wxs" module="formattor"></wxs>
+      <view class="time">{{formattor.monthFormat(key)}}</view>
+      <view class="content" wx:for="{{tomatoes[key]}}" wx:for-index="index" wx:key="index">
+        <text> {{formattor.dateFormat(item.created_at,"hh:mm")}}</text>    
+        <view class="detail">{{item.description}} </view>
+      </view>
+    </view>
+  </scroll-view>
+
+  <scroll-view scroll-y="true" class="lists" wx:if="{{tab === 'task'}}">
+    <view class="item"  wx:for="{{todos}}" wx:for-index="key" wx:key="index">
+      <wxs src="../../lib/formattor.wxs" module="formattor"></wxs>
+      <view class="time">{{formattor.monthFormat(key)}}</view>
+      <view class="content" wx:for="{{todos[key]}}" wx:for-index="index" wx:key="index">
+        <text> {{formattor.dateFormat(item.created_at,"hh:mm")}}</text>    
+        <view class="detail">{{item.description}} </view>
       </view>
     </view>
   </scroll-view>
